# weekend-raytracer

./: .gitattributes  CMakeLists.txt  README.md
notes/: 02_image.md  04_rays_camera_background.md  05_sphere.md
src/: CMakeLists.txt  color.h  main.cpp  ray.cpp  ray.h  vec3.cpp  vec3.h
